fixed issue with notes section getting cut off at bottom on ramble show page.

--- a/app/assets/stylesheets/rambles.css.scss
+++ b/app/assets/stylesheets/rambles.css.scss
@@ -7,6 +7,7 @@
 .container {
 	@include outer-container;
 	margin-top: 100px;
+    margin-bottom: 10px;
 }
 
 .ramble-notes {
@@ -14,7 +15,7 @@
 	text-align: center;
 	padding-top: 10px;
 	max-width:500px;
-	max-height:650px;
+//	max-height:650px;
 	overflow: scroll;
 	margin-left: 50px;
 	margin-top: -40px;
